add_library(secrets STATIC Secrets.cpp Secrets.h)
target_link_libraries(secrets Qt6::Core)
target_compile_definitions(secrets PUBLIC -DEMBED_SECRETS)
target_include_directories(secrets PUBLIC .)

set(Launcher_CommonName "DevLauncher")

set(Launcher_Copyright "MultiMC Contributors" CACHE INTERNAL "")
set(Launcher_Copyright_Full "Copyright 2015-2023 ${Launcher_Copyright}" CACHE INTERNAL "")
set(Launcher_Domain "multimc.org" CACHE INTERNAL "")
set(Launcher_Name "${Launcher_CommonName}" CACHE INTERNAL "")
if(Launcher_DEV_DATA)
    set(Launcher_FSName "devlauncher-dev" CACHE INTERNAL "")
else()
    set(Launcher_FSName "devlauncher" CACHE INTERNAL "")
endif()
set(Launcher_DisplayName "${Launcher_CommonName} 6" CACHE INTERNAL "")
set(Launcher_UserAgent "${Launcher_CommonName}/6.0" CACHE INTERNAL "")
set(Launcher_ConfigFile "${Launcher_FSName}.cfg" CACHE INTERNAL "")
set(Launcher_Git "https://github.com/MultiMC/Launcher" CACHE INTERNAL "")
set(Launcher_Identifier "org.multimc.${Launcher_Name}" CACHE INTERNAL "")
set(Launcher_Description "${Launcher_Name}:  Minecraft launcher and management utility." CACHE INTERNAL "")

set(Launcher_Branding_ICO "Launcher.ico" CACHE INTERNAL "")
set(Launcher_Branding_ICNS "notsecrets/Launcher.icns" CACHE INTERNAL "")
set(Launcher_Branding_WindowsRC "notsecrets/windows_metafile.rc" CACHE INTERNAL "")
set(Launcher_Branding_LogoQRC "notsecrets/logo.qrc" CACHE INTERNAL "")

add_project_meta(META_FILES_TO_INCLUDE)
